app/javascript/stylesheets/tripPlanningView.scss
/* ... */
.spotBox::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

.spotBTN {
  background-color: #eebc39;
  text-decoration: none;
  color: #fff;
  font-size: 20px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s ease;
}
.spotBTN:hover {
  font-weight: bold;
  color: white;
  background-color: #262D4B;
}

.tripNameDiv {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: 20px;

  button {
    width: 80px;
    border: 1px solid #262D4B;
    border-radius: 8px;
    color: #262D4B;
    background-color: white;
    transition: all 0.3s ease;
  }

  button:hover {
    background-color: #EDBB46;
    border: none;
  }
}

// planMessage CSS

@keyframes showPlanMessage {
  from {
    top: -30px;
  }
  to {
    top: 0px;
  }
}

.planMessage {
  position: absolute;
  width: 100%;
  height: 30px;
  text-align: center;
  top: -30px;
  left: 0px;
  z-index: 100;
  line-height: 30px;
}

.planMessageSuccess {
  background-color: rgb(96, 180, 96);
  color: white;
  top: 0px;
  animation-name: showPlanMessage;
  animation-duration: 0.3s;
}

.planMessageFailed {
  background-color: rgb(211, 102, 102);
  color: white;
  top: 0px;
  animation-name: showPlanMessage;
  animation-duration: 0.3s;
}

@keyframes showRouteError {
  from {
    opacity: 1
  }
  to {
    opacity: 0
  }
}

#routeErrorMessage {
  width: 100%;
  text-align: center;
  background-color: rgb(211, 102, 102);
  color: white;
  position: absolute;
  top: 0;
  left: 0;
  animation-duration: 0.3s;
  animation-name: showRouteError;
  animation-timing-function: ease;
}


// SpotDetails section in Plan page

.spotDetailsTitleBox {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;

  .spotDetailsTitleinPlan {
    width: 90%;
    height: 60px;
    background-color: white;
    position:relative;
    z-index: 10;
    padding-left: 20px;
    padding-right: 20px;
    display: flex;
    align-items: center;
    font-size: 1.3rem;
    white-space: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
  
    i {
      margin-right: 10px;
    }
  
  }

  .detailsCloseBtn {
    width: 10%;
    text-align: center;
    font-size: 1.3rem;
    cursor: pointer;
  }

  .detailsCloseBtn:hover {
    color: #D96A49;
  }  

}


// SpotComment section

.spotCommentForm {
  padding: 40px 20px 20px 20px;
  border-top: 4px solid #eebc39;

  div {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .spotCommentTitle {
      display: block;
      font-weight: 500;
      font-size: 1.2rem;
    }

    .commentSaveBTN {
      display: inline-block;
      text-align: center;
      width: 75px;
      color: #262D4B;
      border: none;
      background-color: #eebc39;
      border-radius: 8px;
      transition: all 0.3s ease;
    }

    .commentSaveBTN:hover {
      background-color: #262D4B;
      color: white;
      cursor: pointer;
    }

  }

  .spotCommentInput {
    width: 100%;
    height: 60vh;
    border-radius: 10px;
    padding: 10px;
    color: #262D4B;
    margin-top: 20px;
  }

  .spotCommentInput:focus {
    outline-color: #DB6A43;
  }

  .spotCommentBox {
    width: 100%;
    padding: 20px;
    color: #262D4B;
    margin-top: 20px;
    word-wrap: break-word;
    background-color: white;
    border-top: 1px solid grey;
  }
  
}

.spotDetailsContentBox {
  position: relative;

  .addCommenttoSpot {
    width: 400px;
    height: 70px;
    position: fixed;
    bottom: 0;
    left: 400px;
    background-color: white;
    box-shadow: 0px -5px 10px rgba(77, 77, 77, 0.386);
    display: flex;
    justify-content: center;
    align-items: center;

    button {
      width: 80%;
      height: 40px;
      border-radius: 5px;
      border: none;
      background-color: #EDBB46;
      color: #262D4B;
      font-size: 1.3rem;
      transition: all 0.3s ease;
    }

    button:hover {
      background-color: #262D4B;
      color: white;
      cursor: pointer;
    }
  }
}

@keyframes showCommentSaveStatus {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.commentSaveSuccess {
  position: absolute;
  top: 4px;
  left: 0;
  background-color: rgb(96, 180, 96);
  width: 100%;
  color: white;
  text-align: center;
  animation-name: showCommentSaveStatus;
  animation-duration: 0.2s;
  animation-timing-function: ease;
}

.commentSaveFailed {
  position: absolute;
  top: 4px;
  left: 0;
  background-color: rgb(211, 102, 102);
  width: 100%;
  color: white;
  text-align: center;
  animation-name: showCommentSaveStatus;
  animation-duration: 0.2s;
  animation-timing-function: ease;

}  

// Loading animation on clanedar & name change

$offset: 187;
$duration: 1.4s;

.spinner {
  animation: rotator $duration linear infinite;
  // visibility: hidden;
}

@keyframes rotator {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(270deg); }
}

.path {
  stroke-dasharray: $offset;
  stroke-dashoffset: 0;
  transform-origin: center;
  animation:
    dash $duration ease-in-out infinite, 
    colors ($duration*4) ease-in-out infinite;
}

@keyframes colors {
	0% { stroke: #4285F4; }
	25% { stroke: #DE3E35; }
	50% { stroke: #F7C223; }
	75% { stroke: #1B9A59; }
  100% { stroke: #4285F4; }
}

@keyframes dash {
 0% { stroke-dashoffset: $offset; }
 50% {
   stroke-dashoffset: $offset/4;
   transform:rotate(135deg);
 }
 100% {
   stroke-dashoffset: $offset;
   transform:rotate(450deg);
 }
}
/* ... */

